[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Hugh Harford <hugh.harford@poscoconsulting.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
pylint = "^3.3.1"
requests = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
